# forge-control

./: .gitattributes  README.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  I18N.md
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs  utils.rs
src/components/: LanguageSelector.tsx  Layout.tsx  Sidebar.tsx
src/lib/: logger.ts  tauri.ts
src/locales/: en.json  pt.json
src/pages/: Dashboard.tsx  Music.tsx  Network.tsx  News.tsx  Processes.tsx  Projects.tsx  Settings.tsx
